--- a/SimpleUI/app/src/main/AndroidManifest.xml
+++ b/SimpleUI/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDNmPOM0VsOCuddR8D9HnVRIgtU9BScSgs"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
